--- a/styl/Header.styl
+++ b/styl/Header.styl
@@ -92,15 +92,15 @@ div.header {
 					gradient($header-button-default-down-gradient);
 				}
 				
-				&.back:before,
-				&.forward:before {
-					background-image: -webkit-gradient(linear, left bottom, right top, from($header-button-default-gradient[1]), to($header-button-default-gradient[0]));
-				}
+				// &.back:before,
+				// &.forward:before {
+				// 	background-image: -webkit-gradient(linear, left bottom, right top, from($header-button-default-gradient[1]), to($header-button-default-gradient[0]));
+				// }
 				
-				&.back:active:before,
-				&.forward:active:before {
-					background-image: -webkit-gradient(linear, left bottom, right top, from($header-button-default-down-gradient[1]), to($header-button-default-down-gradient[0]));
-				}
+				// &.back:active:before,
+				// &.forward:active:before {
+				// 	background-image: -webkit-gradient(linear, left bottom, right top, from($header-button-default-down-gradient[1]), to($header-button-default-down-gradient[0]));
+				// }
 			}
 		}
 		
